// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nestedContentPopulate type=collection_block type=collection_view,rows=[{}] 1`] = `
Object {
  "alive": true,
  "collection_id": Any<String>,
  "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "created_by_table": "notion_user",
  "created_time": Any<Number>,
  "id": Any<String>,
  "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
  "parent_id": "page1_id",
  "parent_table": "block",
  "shard_id": 731776,
  "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
  "type": "collection_view",
  "version": 0,
  "view_ids": Array [
    Any<String>,
  ],
}
`;

exports[`nestedContentPopulate type=collection_block type=collection_view,rows=[{}] 2`] = `
Object {
  "args": Object {
    "alive": true,
    "collection_id": Any<String>,
    "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
    "created_by_table": "notion_user",
    "created_time": Any<Number>,
    "id": Any<String>,
    "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
    "parent_id": "page1_id",
    "parent_table": "block",
    "shard_id": 731776,
    "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
    "type": "collection_view",
    "version": 0,
    "view_ids": Array [
      Any<String>,
    ],
  },
  "command": "update",
  "id": Any<String>,
  "path": Array [],
  "table": "block",
}
`;

exports[`nestedContentPopulate type=collection_block type=collection_view_page,rows=[] 1`] = `
Object {
  "alive": true,
  "collection_id": Any<String>,
  "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "created_by_table": "notion_user",
  "created_time": Any<Number>,
  "id": Any<String>,
  "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
  "parent_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
  "parent_table": "space",
  "permissions": Array [
    Object {
      "role": "editor",
      "type": "space_permission",
      "user_id": "72e85506-b758-481a-92b1-73984a903002",
    },
  ],
  "shard_id": 731776,
  "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
  "type": "collection_view_page",
  "version": 0,
  "view_ids": Array [
    Any<String>,
  ],
}
`;

exports[`nestedContentPopulate type=collection_block type=collection_view_page,rows=[] 2`] = `
Object {
  "args": Object {
    "alive": true,
    "collection_id": Any<String>,
    "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
    "created_by_table": "notion_user",
    "created_time": Any<Number>,
    "id": Any<String>,
    "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
    "last_edited_by_table": "notion_user",
    "last_edited_time": Any<Number>,
    "parent_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
    "parent_table": "space",
    "permissions": Array [
      Object {
        "role": "editor",
        "type": "space_permission",
        "user_id": "72e85506-b758-481a-92b1-73984a903002",
      },
    ],
    "shard_id": 731776,
    "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
    "type": "collection_view_page",
    "version": 0,
    "view_ids": Array [
      Any<String>,
    ],
  },
  "command": "update",
  "id": Any<String>,
  "path": Array [],
  "table": "block",
}
`;

exports[`nestedContentPopulate type=page is_template=false,is_private=true,contents=[{}],parent=space 1`] = `
Object {
  "alive": true,
  "content": Array [
    "48a3d30c-c259-4047-986f-74d9a6cb1304",
  ],
  "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "created_by_table": "notion_user",
  "created_time": Any<Number>,
  "format": Object {
    "page_font": "Monaco",
  },
  "id": Any<String>,
  "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
  "parent_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
  "parent_table": "space",
  "permissions": Array [
    Object {
      "role": "editor",
      "type": "user_permission",
      "user_id": "72e85506-b758-481a-92b1-73984a903002",
    },
  ],
  "properties": Object {
    "title": Array [
      Array [
        "Page",
      ],
    ],
  },
  "shard_id": 731776,
  "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
  "type": "page",
  "version": 0,
}
`;

exports[`nestedContentPopulate type=page is_template=false,is_private=true,contents=[{}],parent=space 2`] = `
Object {
  "alive": true,
  "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "created_by_table": "notion_user",
  "created_time": Any<Number>,
  "format": Object {
    "block_color": "blue",
  },
  "id": "48a3d30c-c259-4047-986f-74d9a6cb1304",
  "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
  "parent_id": "48a3d30c-c259-4047-986f-74d9a6cb1305",
  "parent_table": "block",
  "properties": Object {
    "title": Array [
      Array [
        "Header",
      ],
    ],
  },
  "shard_id": 731776,
  "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
  "type": "header",
  "version": 0,
}
`;

exports[`nestedContentPopulate type=page is_template=false,is_private=true,contents=[{}],parent=space 3`] = `
Array [
  Object {
    "args": Object {
      "alive": true,
      "content": Array [],
      "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
      "created_by_table": "notion_user",
      "created_time": Any<Number>,
      "format": Object {
        "page_font": "Monaco",
      },
      "id": Any<String>,
      "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
      "parent_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
      "parent_table": "space",
      "permissions": Array [
        Object {
          "role": "editor",
          "type": "user_permission",
          "user_id": "72e85506-b758-481a-92b1-73984a903002",
        },
      ],
      "properties": Object {
        "title": Array [
          Array [
            "Page",
          ],
        ],
      },
      "shard_id": 731776,
      "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
      "type": "page",
      "version": 0,
    },
    "command": "update",
    "id": "48a3d30c-c259-4047-986f-74d9a6cb1305",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "alive": true,
      "created_by_id": "72e85506-b758-481a-92b1-73984a903002",
      "created_by_table": "notion_user",
      "created_time": Any<Number>,
      "format": Object {
        "block_color": "blue",
      },
      "id": "48a3d30c-c259-4047-986f-74d9a6cb1304",
      "last_edited_by_id": "72e85506-b758-481a-92b1-73984a903002",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
      "parent_id": "48a3d30c-c259-4047-986f-74d9a6cb1305",
      "parent_table": "block",
      "properties": Object {
        "title": Array [
          Array [
            "Header",
          ],
        ],
      },
      "shard_id": 731776,
      "space_id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
      "type": "header",
      "version": 0,
    },
    "command": "update",
    "id": "48a3d30c-c259-4047-986f-74d9a6cb1304",
    "path": Array [],
    "table": "block",
  },
  Object {
    "args": Object {
      "after": "",
      "id": "48a3d30c-c259-4047-986f-74d9a6cb1304",
    },
    "command": "listAfter",
    "id": "48a3d30c-c259-4047-986f-74d9a6cb1305",
    "path": Array [
      "content",
    ],
    "table": "block",
  },
  Object {
    "args": Object {
      "after": "",
      "id": "48a3d30c-c259-4047-986f-74d9a6cb1305",
    },
    "command": "listAfter",
    "id": "322c0b0c-5fb4-4fdc-97eb-84e7142b2a80",
    "path": Array [
      "pages",
    ],
    "table": "space",
  },
]
`;
